[package]
name = "irecovery"
version = "0.1.0"
edition = "2024"
description = "Pure Rust port of libirecovery (https://github.com/libimobiledevice/libirecovery) with no dependencies."
license = "MIT"
repository = "https://github.com/uncor3/irecovery-rs"
keywords = ["libirecovery", "irecovery", "recovery", "ios", "apple" ]
authors = ["uncor3 <github.com/uncor3>"]

[features]
default = []
bundled-db = []
tokio = ["nusb/tokio"]

[dependencies]
futures-core = "0.3"
futures-lite = "2"
nusb = "0.2.4"
thiserror = "2"
