[package]
name = "irecovery"
version = "0.2.0"
edition = "2024"
description = "Pure Rust port of libirecovery (https://github.com/libimobiledevice/libirecovery)"
license = "MIT"
repository = "https://github.com/uncor3/irecovery-rs"
keywords = ["libirecovery", "irecovery", "recovery", "ios", "apple" ]
authors = ["uncor3 <github.com/uncor3>"]

[features]
default = []
bundled-db = []
smol = ["dep:blocking", "nusb/smol"]
tokio = ["dep:tokio", "nusb/tokio"]

[dependencies]
blocking = { version = "1", optional = true }
futures-core = "0.3"
futures-lite = "2"
nusb = "0.2.4"
thiserror = "2"
tokio = { version = "1", features = ["rt"], optional = true }
